# LavenderEngine

./: .gitignore  CMakeLists.txt  TODO.md  main.cpp  vcpkg.json
assets/scripts/: lavender_api.lua  main_scene.lua  pong.lua  pong2.lua  pong_final.lua
engine/: structure.md
engine/audio/Audio/: AudioEngine.cpp  AudioEngine.h
engine/core/Application/: Application.cpp  Application.h
engine/core/Object/: Object.cpp  Object.h
engine/math/Color/: Color.h
engine/math/MathUtils/: MathUtils.cpp  MathUtils.h
engine/math/Matrix/: Matrix.h
engine/math/Random/: Random.h
engine/math/Transform/: Transform.h
engine/math/Vector/: Vector.h
engine/rendering/Camera/: Camera.h
engine/rendering/Renderer/: Renderer.cpp  Renderer.h
engine/rendering/Sprite/: sprite.cpp  sprite.h
engine/rendering/Texture/: texture.cpp  texture.h
engine/scene/Scene/: Scene.cpp  Scene.h
engine/scripting/LuaBindings/: LuaBindngs.cpp  LuaBindngs.h
glad/src/: glad.c
include/glad/include/glad/: glad.h
lib/Camera/: Camera.cpp  Camera.h
lib/Object/: Object.cpp  Object.h
lib/Renderer/: Renderer.cpp  Renderer.h
lib/Scene/: Scene.cpp  Scene.h
